More extensive tutorial, fix badge alignment in documentation

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -6,3 +6,7 @@
 .wy-side-nav-search>a.icon img.logo {
     max-width: 100px !important;
 }
+
+#furo-main-content img {
+    vertical-align: middle;
+}
